Fix readability

--- a/app/assets/stylesheets/demands.sass
+++ b/app/assets/stylesheets/demands.sass
@@ -125,7 +125,7 @@ body
       img
         opacity: 1
   h5
-    font-weight: 500
+    font-weight: bold
     font-size: .8em !important
     padding: .2em 1em .3em 1em
     margin: 0
